// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrollableCalendar should render correctly 1`] = `
<BpkCalendar
  changeMonthLabel={null}
  className={null}
  dateModifiers={Object {}}
  dateProps={null}
  daysOfWeek={
    Array [
      Object {
        "index": 0,
        "isWeekend": true,
        "name": "Sunday",
        "nameAbbr": "Sun",
      },
      Object {
        "index": 1,
        "isWeekend": false,
        "name": "Monday",
        "nameAbbr": "Mon",
      },
      Object {
        "index": 2,
        "isWeekend": false,
        "name": "Tuesday",
        "nameAbbr": "Tue",
      },
      Object {
        "index": 3,
        "isWeekend": false,
        "name": "Wednesday",
        "nameAbbr": "Wed",
      },
      Object {
        "index": 4,
        "isWeekend": false,
        "name": "Thursday",
        "nameAbbr": "Thu",
      },
      Object {
        "index": 5,
        "isWeekend": false,
        "name": "Friday",
        "nameAbbr": "Fri",
      },
      Object {
        "index": 6,
        "isWeekend": true,
        "name": "Saturday",
        "nameAbbr": "Sat",
      },
    ]
  }
  fixedWidth={true}
  focusedDate={2010-02-14T00:00:00.000Z}
  formatDateFull={[Function]}
  formatMonth={[Function]}
  gridClassName={null}
  gridProps={null}
  headerProps={null}
  id="scrollableCalendar"
  initiallyFocusedDate={null}
  markOutsideDays={true}
  markToday={true}
  maxDate={2011-02-15T00:00:00.000Z}
  minDate={2010-02-14T00:00:00.000Z}
  month={2010-02-01T00:00:00.000Z}
  navProps={null}
  onDateClick={[Function]}
  onDateKeyDown={[Function]}
  onMonthChange={[Function]}
  preventKeyboardFocus={true}
  selectedDate={null}
  showWeekendSeparator={true}
  weekStartsOn={1}
/>
`;

exports[`BpkScrollableCalendar should support arbitrary props 1`] = `
<BpkCalendar
  changeMonthLabel={null}
  className={null}
  dateModifiers={Object {}}
  dateProps={null}
  daysOfWeek={
    Array [
      Object {
        "index": 0,
        "isWeekend": true,
        "name": "Sunday",
        "nameAbbr": "Sun",
      },
      Object {
        "index": 1,
        "isWeekend": false,
        "name": "Monday",
        "nameAbbr": "Mon",
      },
      Object {
        "index": 2,
        "isWeekend": false,
        "name": "Tuesday",
        "nameAbbr": "Tue",
      },
      Object {
        "index": 3,
        "isWeekend": false,
        "name": "Wednesday",
        "nameAbbr": "Wed",
      },
      Object {
        "index": 4,
        "isWeekend": false,
        "name": "Thursday",
        "nameAbbr": "Thu",
      },
      Object {
        "index": 5,
        "isWeekend": false,
        "name": "Friday",
        "nameAbbr": "Fri",
      },
      Object {
        "index": 6,
        "isWeekend": true,
        "name": "Saturday",
        "nameAbbr": "Sat",
      },
    ]
  }
  fixedWidth={true}
  focusedDate={2010-02-14T00:00:00.000Z}
  formatDateFull={[Function]}
  formatMonth={[Function]}
  gridClassName={null}
  gridProps={null}
  headerProps={null}
  id="scrollableCalendar"
  initiallyFocusedDate={null}
  markOutsideDays={true}
  markToday={true}
  maxDate={2011-02-15T00:00:00.000Z}
  minDate={2010-02-14T00:00:00.000Z}
  month={2010-02-01T00:00:00.000Z}
  navProps={null}
  onDateClick={[Function]}
  onDateKeyDown={[Function]}
  onMonthChange={[Function]}
  preventKeyboardFocus={true}
  selectedDate={null}
  showWeekendSeparator={true}
  testID="123"
  weekStartsOn={1}
/>
`;

exports[`BpkScrollableCalendar should support custom class names 1`] = `
<BpkCalendar
  changeMonthLabel={null}
  className="custom-classname"
  dateModifiers={Object {}}
  dateProps={null}
  daysOfWeek={
    Array [
      Object {
        "index": 0,
        "isWeekend": true,
        "name": "Sunday",
        "nameAbbr": "Sun",
      },
      Object {
        "index": 1,
        "isWeekend": false,
        "name": "Monday",
        "nameAbbr": "Mon",
      },
      Object {
        "index": 2,
        "isWeekend": false,
        "name": "Tuesday",
        "nameAbbr": "Tue",
      },
      Object {
        "index": 3,
        "isWeekend": false,
        "name": "Wednesday",
        "nameAbbr": "Wed",
      },
      Object {
        "index": 4,
        "isWeekend": false,
        "name": "Thursday",
        "nameAbbr": "Thu",
      },
      Object {
        "index": 5,
        "isWeekend": false,
        "name": "Friday",
        "nameAbbr": "Fri",
      },
      Object {
        "index": 6,
        "isWeekend": true,
        "name": "Saturday",
        "nameAbbr": "Sat",
      },
    ]
  }
  fixedWidth={true}
  focusedDate={2010-02-14T00:00:00.000Z}
  formatDateFull={[Function]}
  formatMonth={[Function]}
  gridClassName={null}
  gridProps={null}
  headerProps={null}
  id="scrollableCalendar"
  initiallyFocusedDate={null}
  markOutsideDays={true}
  markToday={true}
  maxDate={2011-02-15T00:00:00.000Z}
  minDate={2010-02-14T00:00:00.000Z}
  month={2010-02-01T00:00:00.000Z}
  navProps={null}
  onDateClick={[Function]}
  onDateKeyDown={[Function]}
  onMonthChange={[Function]}
  preventKeyboardFocus={true}
  selectedDate={null}
  showWeekendSeparator={true}
  weekStartsOn={1}
/>
`;
